common-applications/test-environment/openeuler-doc-search/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: doc-search-ingress
  namespace: openeuler-doc-search
spec:
  tls:
    - hosts:
        - doc-search.test.osinfra.cn
      secretName: doc-search-tls
  rules:
    - host: doc-search.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: doc-search-service
              servicePort: 80
            path: /
